--- a/shortcuts.tex
+++ b/shortcuts.tex
@@ -42,7 +42,7 @@
 \newtheorem{definition}{Definition}
 
 % ========== refs ===========
-\newcommand{\eqnref}[1]{(\ref{eq:{#1}})}
+\newcommand{\eqnref}[1]{(\ref{eqn:#1})}
 \newcommand{\secref}[1]{Section \ref{sec:#1}}
 \newcommand{\figref}[1]{Figure \ref{fig:#1}}
 
