proofreading up to drl

--- a/shortcuts.tex
+++ b/shortcuts.tex
@@ -33,6 +33,7 @@
 \newcommand{\expect}{\mathop{\mathbb{E}}}
 \newcommand{\expval}[1]{\mathbb{E}\left[ {#1} \right]}
 \newcommand{\dt}{\text{d}}
+\newcommand{\real}{\mathbb{R}}
 
 
 % ========== theorems ===========
