--- a/shortcuts.tex
+++ b/shortcuts.tex
@@ -41,6 +41,7 @@
 \newtheorem{corollary}{Corollary}
 \newtheorem{lemma}{Lemma}
 \newtheorem{definition}{Definition}
+\newtheorem{proposition}{Proposition}
 
 % ========== refs ===========
 \newcommand{\eqnref}[1]{(\ref{eqn:#1})}
