--- a/shortcuts.tex
+++ b/shortcuts.tex
@@ -34,6 +34,7 @@
 \newcommand{\expval}[1]{\mathbb{E}\left[ {#1} \right]}
 \newcommand{\dt}{\text{d}}
 \newcommand{\real}{\mathbb{R}}
+\newcommand{\cca}{\dot{=}}
 
 
 % ========== theorems ===========
@@ -47,6 +48,7 @@
 \newcommand{\eqnref}[1]{(\ref{eqn:#1})}
 \newcommand{\secref}[1]{Section \ref{sec:#1}}
 \newcommand{\figref}[1]{Figure \ref{fig:#1}}
+\newcommand{\chref}[1]{Figure \ref{ch:#1}}
 
 
 
