improvements, towards VI

--- a/shortcuts.tex
+++ b/shortcuts.tex
@@ -35,6 +35,7 @@
 \newcommand{\dt}{\text{d}}
 \newcommand{\real}{\mathbb{R}}
 \newcommand{\cca}{\dot{=}}
+\newcommand{\argmax}{\text{arg}\max}
 
 
 % ========== theorems ===========
@@ -48,7 +49,9 @@
 \newcommand{\eqnref}[1]{(\ref{eqn:#1})}
 \newcommand{\secref}[1]{Section \ref{sec:#1}}
 \newcommand{\figref}[1]{Figure \ref{fig:#1}}
-\newcommand{\chref}[1]{Figure \ref{ch:#1}}
+\newcommand{\chref}[1]{Chapter \ref{ch:#1}}
+\newcommand{\algref}[1]{Algorithm \ref{alg:#1}}
+\newcommand{\thmref}[1]{Theorem \ref{thm:#1}}
 
 
 
