+cvar visual +VI tweaks

--- a/shortcuts.tex
+++ b/shortcuts.tex
@@ -18,6 +18,7 @@
 % ========== risk ===========
 \newcommand{\cvar}{\text{CVaR}}
 \newcommand{\acvara}{\alpha\text{CVaR}_\alpha}
+\newcommand{\ycvary}{y\text{CVaR}_y}
 \newcommand{\var}{\text{VaR}}
 \newcommand{\envelope}{\mathcal{U}_{\cvar}(\alpha, P(\cdot | x, a))}
 
