--- a/other/ideas.tex
+++ b/other/ideas.tex
@@ -67,11 +67,7 @@ pdfpagemode=UseNone,backref=false,colorlinks=true] {hyperref}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\newtheorem*{theorem}{Theorem}
-\newtheorem*{corollary}{Corollary}
-\newtheorem*{lemma}{Lemma}
-
-\newcommand\given[1][]{\:#1\vert\:}
+\input{../shortcuts}
 
 \begin{document}
 
@@ -95,8 +91,93 @@ CVaR &= \min \dfrac{1}{\alpha}\mathbb{E}((Z-s)^-)] + s
 
 \textbf{If this estimation procedure works:} we can use the techniques used in distributional quantile regression: Take the next-state distribution, sum with reward and 'generate' samples (importance sampling will be necessary if not uniform). Use samples to shift the VaR estimates, use Var estimates and samples to shift CVaR estimates (more like yCVaR). Important: the VaR estimates are internal parameters, the samples are being generated from the yCVaR estimates by conversion.
 
-
 \textbf{Notes:} can we be sure there doesn't exist a single parameter exp procedure that yields cvar? \textbf{investigate the cvar decomposition}
+
+\subsection{28.2.}
+
+
+There already exists a theory for recursively estimating CVaR based on stochastic approximation:
+
+\begin{align*}
+\var_\alpha &= \var_\alpha - \beta \bsquare{1-\dfrac{1}{\alpha}\indicator_{(\var \le x)}}\\
+\cvar_\alpha &= (1-\beta)\cvar_\alpha + \beta \bsquare{\var_\alpha + \dfrac{1}{\alpha}(x-\var_\alpha)^-}
+\end{align*}
+\todo{rewrite var, examine convergence}
+
+
+\begin{algorithm}[h!]
+\caption{CVaR Q-learning: big picture}
+\begin{algorithmic}
+    \STATE Initialize $VaR, CVaR$, e.g. $\var_{y_i}(x, a)=0, \cvar_{y_i}(x, a)=0$ for all $x, a, y_i$
+    
+	\WHILE{not converged}
+	
+	\STATE $x = x_0$
+	\STATE $s = \var_\alpha(x, \argmax_a \cvar_\alpha(x, a))$
+	
+	\WHILE{$x$ is not terminal}
+	\STATE $a = \varepsilon-\argmax_a CVaRFromS(x, a, s)$
+	\STATE $x', r = transition(x, a)$
+	\STATE $UPDATE(x, a, x', r)$
+	\STATE $s = \dfrac{r-s}{\gamma}$
+	\STATE $x = x'$
+	\ENDWHILE
+	
+	\ENDWHILE
+\end{algorithmic}
+\end{algorithm}
+
+\begin{algorithm}[h!]
+\caption{UPDATE}
+\begin{algorithmic}
+
+    \STATE $UPDATE(x, a, x', r)$
+    
+	\FOR{each $y_i$}
+	
+	\STATE $a' = \argmax_{a''} \cvar_{y_i} (x', a'')$
+	\STATE generate 'samples' from distribution underlying $\cvar_\cdot (x', a')$
+	
+	\FOR{each sample $v$}
+	\STATE $\var_{y_i}(x, a) = \var_{y_i}(x, a) - \beta \bsquare{1 - \dfrac{1}{y_i}\indicator_{(\var_{y_i}(x, a) \le r+\gamma v)}}$
+	\STATE $\cvar_{y_i}(x, a) = (1-\beta)\cvar_{y_i}(x, a) - \beta \bsquare{\var_{y_i}(x, a) + \dfrac{1}{y_i}\bround{r+\gamma v - \var_{y_i}(x, a)}}$
+	\ENDFOR
+	
+	\ENDFOR
+\end{algorithmic}
+\end{algorithm}
+
+\begin{algorithm}[h!]
+\caption{CVaRFromS}
+\begin{algorithmic}
+	\STATE $CVaRFromS(x, a, s)$
+	
+    \STATE convert $\cvar_\bullet (x, a)\to\var$ 
+    \STATE find $y$ where $\var_y=s$
+    \RETURN $\cvar_y(x, a)$
+\end{algorithmic}
+\end{algorithm}
+reasoning: when converged, the distribution's $\cvar_y$ is the best approximation. \todo{but is it the best cvar-s aproximation? better than var-alpha-cvar? Note: cvar<=var but the same doesn't hold for the underlying distribution}
+
+\begin{algorithm}[h!]
+\caption{CVaRFromS, alternate}
+\begin{algorithmic}
+	\STATE $CVaRFromS(x, a, s)$
+    \STATE find $y$ where $\var_y(x, a)=s$
+    \RETURN $\cvar_y(x, a)$
+\end{algorithmic}
+\end{algorithm}
+
+\todo{VaR representation? ($\tau/2$?)}
+
+\textbf{Note:} Ideas based on working with cvar alone led to nowhere, we have no way of recovering both cvar and var (which we need for the expectation)
+
+\textbf{Note:} should include importance sampling for log-spaced atoms
+
+\textbf{Idea:} the improved VI procedure computes dual of the dual cvar decomposition (proof required), so the above procedure is doing exactly what the VI does
+
+
+\textbf{Thesis Idea:} separate var-based stationary improvement to a separate chapter after VI, show that AI gridworld is improved
 
 \section{Thesis Plan}
 
