--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -1,6 +1,5 @@
 % Encoding: windows-1252
 
-
 % ==================================
 % Survey
 % ==================================
@@ -227,6 +226,15 @@
   publisher={Springer Science \& Business Media}
 }
 
+% VaR-CVaR estimation
+@incollection{bardou2009recursive,
+  title={Recursive computation of value-at-risk and conditional value-at-risk using MC and QMC},
+  author={Bardou, Olivier and Frikha, Noufel and Pages, Gilles},
+  booktitle={Monte Carlo and quasi-Monte Carlo methods 2008},
+  pages={193--208},
+  year={2009},
+  publisher={Springer}
+}
 
 % ==================================
 % General RL
@@ -239,17 +247,6 @@
   number={1},
   year={1998},
   publisher={MIT press Cambridge}
-}
-
-@article{watkins1992q,
-  title={Q-learning},
-  author={Watkins, Christopher JCH and Dayan, Peter},
-  journal={Machine learning},
-  volume={8},
-  number={3-4},
-  pages={279--292},
-  year={1992},
-  publisher={Springer}
 }
 
 @article{bellman1957markovian,
@@ -288,9 +285,21 @@
 }
 
 % ==================================
-% Convergence
+% Q-learning
 % ==================================
 
+@article{watkins1992q,
+  title={Q-learning},
+  author={Watkins, Christopher JCH and Dayan, Peter},
+  journal={Machine learning},
+  volume={8},
+  number={3-4},
+  pages={279--292},
+  year={1992},
+  publisher={Springer}
+}
+
+% extended q-learning convergence proofs
 @article{tsitsiklis1994asynchronous,
   title={Asynchronous stochastic approximation and Q-learning},
   author={Tsitsiklis, John N},
@@ -300,6 +309,15 @@
   pages={185--202},
   year={1994},
   publisher={Springer}
+}
+
+% q-learning as a random process
+@inproceedings{jaakkola1994convergence,
+  title={Convergence of stochastic iterative dynamic programming algorithms},
+  author={Jaakkola, Tommi and Jordan, Michael I and Singh, Satinder P},
+  booktitle={Advances in neural information processing systems},
+  pages={703--710},
+  year={1994}
 }
 
 % ==================================
