--- a/shortcuts.tex
+++ b/shortcuts.tex
@@ -29,6 +29,7 @@
 \newcommand{\cA}{\mathcal{A}}
 \newcommand{\cX}{\mathcal{X}}
 \newcommand{\cT}{\mathcal{T}}
+\newcommand{\cY}{\mathcal{Y}}
 
 
 % ========== math ===========
