xi proof reworked

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -236,6 +236,17 @@
   publisher={Springer}
 }
 
+
+@article{bernard2015quantile,
+  title={Quantile of a mixture with application to model risk assessment},
+  author={Bernard, Carole and Vanduffel, Steven},
+  journal={Dependence Modeling},
+  volume={3},
+  number={1},
+  year={2015},
+  publisher={De Gruyter Open}
+}
+
 % ==================================
 % General RL
 % ==================================
