--- a/thesis.tex
+++ b/thesis.tex
@@ -141,7 +141,7 @@
 %\renewcommand{\thechapter}{\alph{chapter}}
 %\cleardoublepage
 %\part{Appendix}
-%\include{Chapters/Appendix}
+\include{Chapters/Appendix}
 %********************************************************************
 % Other Stuff in the Back
 %*******************************************************
