--- a/shortcuts.tex
+++ b/shortcuts.tex
@@ -40,6 +40,7 @@
 \newcommand{\real}{\mathbb{R}}
 \newcommand{\cca}{\dot{=}}
 \newcommand{\argmax}{\text{arg}\max}
+\newcommand{\argmin}{\text{arg}\min}
 
 
 % ========== theorems ===========
