--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -66,6 +66,12 @@
   publisher={SIAM}
 }
 
+@article{coraluppi1998optimal,
+  title={Optimal control of Markov decision processes for performance and robustness.},
+  author={Coraluppi, Stefano Paulo},
+  year={1998}
+}
+
 % ==================================
 % Distributional RL
 % ==================================
