--- a/shortcuts.tex
+++ b/shortcuts.tex
@@ -1,5 +1,6 @@
 \usepackage{algorithm}
 \usepackage{algorithmic}
+\usepackage{multicol}
 \usepackage{amsthm}
 \usepackage{datetime}
 %\usepackage{bbm}
@@ -22,7 +23,7 @@
 \newcommand{\acvara}{\alpha\text{CVaR}_\alpha}
 \newcommand{\ycvary}{y\text{CVaR}_y}
 \newcommand{\var}{\text{VaR}}
-\newcommand{\envelope}{\mathcal{U}_{\cvar}(\alpha, P(\cdot | x, a))}
+\newcommand{\envelope}{\mathcal{U}_{\cvar}(\alpha, p(\cdot | x, a))}
 
 
 % ========== sets ===========
@@ -42,6 +43,10 @@
 \newcommand{\argmax}{\text{arg}\max}
 \newcommand{\argmin}{\text{arg}\min}
 
+\makeatletter
+\newcommand*\bigcdot{\mathpalette\bigcdot@{.5}}
+\newcommand*\bigcdot@[2]{\mathbin{\vcenter{\hbox{\scalebox{#2}{$\m@th#1\bullet$}}}}}
+\makeatother
 
 % ========== theorems ===========
 \newtheorem{theorem}{Theorem}
@@ -74,7 +79,7 @@
   \addtolength{\algorithmicindent}{\myindent}
 }
 \newcommand\eindent{\endgroup}
-
+\newcommand{\comment}[1]{\begingroup \color{Gray} \# {#1}	\endgroup}
 
 \newcommand{\given}[1][]{\:#1\vert\:}
 \newcommand{\interpI}{\mathcal{I}}
