--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -414,6 +414,43 @@
   publisher={JSTOR}
 }
 
+
+% ==================================
+% Deep Learning
+% ==================================
+
+@book{goodfellow2016deep,
+  title={Deep learning},
+  author={Goodfellow, Ian and Bengio, Yoshua and Courville, Aaron and Bengio, Yoshua},
+  volume={1},
+  year={2016},
+  publisher={MIT press Cambridge}
+}
+
+@article{kingma2014adam,
+  title={Adam: A method for stochastic optimization},
+  author={Kingma, Diederik P and Ba, Jimmy},
+  journal={arXiv preprint arXiv:1412.6980},
+  year={2014}
+}
+
+@article{ruder2016overview,
+  title={An overview of gradient descent optimization algorithms},
+  author={Ruder, Sebastian},
+  journal={arXiv preprint arXiv:1609.04747},
+  year={2016}
+}
+
+@article{tieleman2012lecture,
+  title={Lecture 6.5-rmsprop: Divide the gradient by a running average of its recent magnitude},
+  author={Tieleman, Tijmen and Hinton, Geoffrey},
+  journal={COURSERA: Neural networks for machine learning},
+  volume={4},
+  number={2},
+  pages={26--31},
+  year={2012}
+}
+
 % ==================================
 % Motivation
 % ==================================
