--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -302,6 +302,15 @@
   year={2000}
 }
 
+@incollection{baird1995residual,
+  title={Residual algorithms: Reinforcement learning with function approximation},
+  author={Baird, Leemon},
+  booktitle={Machine Learning Proceedings 1995},
+  pages={30--37},
+  year={1995},
+  publisher={Elsevier}
+}
+
 % ==================================
 % Q-learning
 % ==================================
@@ -451,6 +460,105 @@
   year={2012}
 }
 
+@inproceedings{krizhevsky2012imagenet,
+  title={Imagenet classification with deep convolutional neural networks},
+  author={Krizhevsky, Alex and Sutskever, Ilya and Hinton, Geoffrey E},
+  booktitle={Advances in neural information processing systems},
+  pages={1097--1105},
+  year={2012}
+}
+
+@inproceedings{jarrett2009best,
+  title={What is the best multi-stage architecture for object recognition?},
+  author={Jarrett, Kevin and Kavukcuoglu, Koray and LeCun, Yann and others},
+  booktitle={Computer Vision, 2009 IEEE 12th International Conference on},
+  pages={2146--2153},
+  year={2009},
+  organization={IEEE}
+}
+
+@inproceedings{abadi2016tensorflow,
+  title={TensorFlow: A System for Large-Scale Machine Learning.},
+  author={Abadi, Mart{\'\i}n and Barham, Paul and Chen, Jianmin and Chen, Zhifeng and Davis, Andy and Dean, Jeffrey and Devin, Matthieu and Ghemawat, Sanjay and Irving, Geoffrey and Isard, Michael and others},
+  booktitle={OSDI},
+  volume={16},
+  pages={265--283},
+  year={2016}
+}
+
+
+% ==================================
+% Deep Q-learning
+% ==================================
+
+@article{silver2017mastering,
+  title={Mastering the game of go without human knowledge},
+  author={Silver, David and Schrittwieser, Julian and Simonyan, Karen and Antonoglou, Ioannis and Huang, Aja and Guez, Arthur and Hubert, Thomas and Baker, Lucas and Lai, Matthew and Bolton, Adrian and others},
+  journal={Nature},
+  volume={550},
+  number={7676},
+  pages={354},
+  year={2017},
+  publisher={Nature Publishing Group}
+}
+
+@article{mnih2015human,
+  title={Human-level control through deep reinforcement learning},
+  author={Mnih, Volodymyr and Kavukcuoglu, Koray and Silver, David and Rusu, Andrei A and Veness, Joel and Bellemare, Marc G and Graves, Alex and Riedmiller, Martin and Fidjeland, Andreas K and Ostrovski, Georg and others},
+  journal={Nature},
+  volume={518},
+  number={7540},
+  pages={529},
+  year={2015},
+  publisher={Nature Publishing Group}
+}
+
+@article{bellemare13arcade,
+  author = {{Bellemare}, M.~G. and {Naddaf}, Y. and {Veness}, J. and {Bowling}, M.},
+  title = {The Arcade Learning Environment: An Evaluation Platform for General Agents},
+  journal = {Journal of Artificial Intelligence Research},
+  year = "2013",
+  month = "jun",
+  volume = "47",
+  pages = "253--279",
+}
+
+@article{schaul2015prioritized,
+  title={Prioritized experience replay},
+  author={Schaul, Tom and Quan, John and Antonoglou, Ioannis and Silver, David},
+  journal={arXiv preprint arXiv:1511.05952},
+  year={2015}
+}
+
+@article{wang2015dueling,
+  title={Dueling network architectures for deep reinforcement learning},
+  author={Wang, Ziyu and Schaul, Tom and Hessel, Matteo and Van Hasselt, Hado and Lanctot, Marc and De Freitas, Nando},
+  journal={arXiv preprint arXiv:1511.06581},
+  year={2015}
+}
+
+@article{hessel2017rainbow,
+  title={Rainbow: Combining Improvements in Deep Reinforcement Learning},
+  author={Hessel, Matteo and Modayil, Joseph and Van Hasselt, Hado and Schaul, Tom and Ostrovski, Georg and Dabney, Will and Horgan, Dan and Piot, Bilal and Azar, Mohammad and Silver, David},
+  journal={arXiv preprint arXiv:1710.02298},
+  year={2017}
+}
+
+@misc{baselines,
+  author = {Dhariwal, Prafulla and Hesse, Christopher and Klimov, Oleg and Nichol, Alex and Plappert, Matthias and Radford, Alec and Schulman, John and Sidor, Szymon and Wu, Yuhuai},
+  title = {OpenAI Baselines},
+  year = {2017},
+  publisher = {GitHub},
+  journal = {GitHub repository},
+  howpublished = {\url{https://github.com/openai/baselines}},
+}
+
+@article{plappert2017parameter,
+  title={Parameter space noise for exploration},
+  author={Plappert, Matthias and Houthooft, Rein and Dhariwal, Prafulla and Sidor, Szymon and Chen, Richard Y and Chen, Xi and Asfour, Tamim and Abbeel, Pieter and Andrychowicz, Marcin},
+  journal={arXiv preprint arXiv:1706.01905},
+  year={2017}
+}
 % ==================================
 % Motivation
 % ==================================
@@ -487,35 +595,6 @@
   publisher={INFORMS}
 }
 
-@article{silver2017mastering,
-  title={Mastering the game of go without human knowledge},
-  author={Silver, David and Schrittwieser, Julian and Simonyan, Karen and Antonoglou, Ioannis and Huang, Aja and Guez, Arthur and Hubert, Thomas and Baker, Lucas and Lai, Matthew and Bolton, Adrian and others},
-  journal={Nature},
-  volume={550},
-  number={7676},
-  pages={354},
-  year={2017},
-  publisher={Nature Publishing Group}
-}
-
-@article{basel2013fundamental,
-  title={Fundamental review of the trading book: A revised market risk framework},
-  author={Basel Committee and others},
-  journal={Consultative Document, October},
-  year={2013}
-}
-
-@article{mnih2015human,
-  title={Human-level control through deep reinforcement learning},
-  author={Mnih, Volodymyr and Kavukcuoglu, Koray and Silver, David and Rusu, Andrei A and Veness, Joel and Bellemare, Marc G and Graves, Alex and Riedmiller, Martin and Fidjeland, Andreas K and Ostrovski, Georg and others},
-  journal={Nature},
-  volume={518},
-  number={7540},
-  pages={529},
-  year={2015},
-  publisher={Nature Publishing Group}
-}
-
 % risk-averse neuroscience
 @article{shen2014risk,
   title={Risk-sensitive reinforcement learning},
@@ -533,14 +612,6 @@
   author={Basel Committee and others},
   journal={Consultative Document, October},
   year={2013}
-}
-
-@inproceedings{krizhevsky2012imagenet,
-  title={Imagenet classification with deep convolutional neural networks},
-  author={Krizhevsky, Alex and Sutskever, Ilya and Hinton, Geoffrey E},
-  booktitle={Advances in neural information processing systems},
-  pages={1097--1105},
-  year={2012}
 }
 
 @article{bahdanau2014neural,
