--- a/FrontBackmatter/Abstract.tex
+++ b/FrontBackmatter/Abstract.tex
@@ -11,9 +11,9 @@
 \chapter*{Abstract}
 
 
-Conditional Value-at-Risk (CVaR) is a well-known measure of risk that has been used for decades in the financial sector and has been directly equated to robustness, an important component of Artificial Intelligence (AI) safety. In this thesis we focus on optimizing CVaR in the context of Reinforcement Learning, a branch of machine learning that has brought significant attention to AI due to it's generality and potential.
+Conditional Value-at-Risk (CVaR) is a well-known measure of risk that has been used for decades in the financial sector and has been directly equated to robustness, an important component of Artificial Intelligence (AI) safety. In this thesis we focus on optimizing CVaR in the context of Reinforcement Learning, a branch of Machine Learning that has brought significant attention to AI due to it's generality and potential.
 
-As a first original contribution, we extend the CVaR Value Iteration algorithm (\citet{chow2015risk}) by appealing to the distributional nature of the CVaR objective. The proposed extension improves computational complexity of the original algorithm from polynomial to linear and we prove it is equivalent to the said algorithm for continuous distributions.
+As a first original contribution, we extend the CVaR Value Iteration algorithm (\citet{chow2015risk}) by utilizing the distributional nature of the CVaR objective. The proposed extension reduces computational complexity of the original algorithm from polynomial to linear and we prove it is equivalent to the said algorithm for continuous distributions.
 
 Secondly, based on the improved procedure, we propose a sampling version of CVaR Value Iteration we call CVaR Q-learning. We also derive a distributional policy improvement algorithm, prove it's validity, and later use it as a heuristic for extracting the optimal policy from the converged CVaR Q-learning algorithm.
 
