--- a/thesis.tex
+++ b/thesis.tex
@@ -28,7 +28,7 @@
 %*******************************************************
 \input{shortcuts}
 \input{classicthesis-config}
-
+\usepackage{pdfpages}
 
 %\SetSymbolFont{operators}   {normal}{OT1}{cmr} {m}{n}
 %\SetSymbolFont{letters}     {normal}{OML}{cmm} {m}{it}
